# controller/dialog.go
@@ -52,33 +52,13 @@ func (c *DialogController) Queue(context *gin.Context) {
 	}
 }
 
-// @Summary 获取待回复消息列表
-// @Description 获取待回复消息列表
-// @Tags Dialog
-// @Accept  json
-// @Produce  json
-// @Success 200 {string} json ""
-// @Router /v1/dialog/list [get]
-func (c *DialogController) List(context *gin.Context) {
-	roomKf, _ := handle.AuthToken2Model(context)
-
-	customer := model.MessageLinkCustomer{Message: model.Message{KfId: roomKf.KfId}}
-	messages, e := customer.WaitReply()
-	ReturnErrInfo(context, e)
-
-	bytes, _ := json.Marshal(messages)
-	log.Println(string(bytes))
-
-	context.JSON(http.StatusOK, messages)
-}
-
-// @Summary 客服接入用户，客服加入会话房间
-// @Description 客服接入用户，客服加入会话房间
-// @Tags Dialog
+// @Summary 会话确认应答
+// @Description 会话确认应答
+// @Tags WaitQueue
 // @Accept  json
 // @Produce  json
 // @Success 200 {string} json "{"code":0,"msg":"ok"}"
-// @Router /v1/dialog/access [post]
+// @Router /v1/wait_queue/access [post]
 func (c *DialogController) Access(context *gin.Context) {
 	var aRequest CustomerIdsRequest
 	if bindErr := context.BindJSON(&aRequest); bindErr != nil {
@@ -104,8 +84,28 @@ func (c *DialogController) Access(context *gin.Context) {
 	ReturnSuccessInfo(context)
 }
 
-// @Summary 确认已读用户的消息
-// @Description 确认已读用户的消息
+// @Summary 获取待回复消息列表
+// @Description 获取待回复消息列表
+// @Tags Dialog
+// @Accept  json
+// @Produce  json
+// @Success 200 {string} json ""
+// @Router /v1/dialog [get]
+func (c *DialogController) List(context *gin.Context) {
+	roomKf, _ := handle.AuthToken2Model(context)
+
+	customer := model.MessageLinkCustomer{Message: model.Message{KfId: roomKf.KfId}}
+	messages, e := customer.WaitReply()
+	ReturnErrInfo(context, e)
+
+	bytes, _ := json.Marshal(messages)
+	log.Println(string(bytes))
+
+	context.JSON(http.StatusOK, messages)
+}
+
+// @Summary 确认已读
+// @Description 确认已读
 // @Tags Dialog
 // @Accept  json
 // @Produce  json
@@ -125,24 +125,24 @@ func (c *DialogController) Ack(context *gin.Context) {
 	ReturnSuccessInfo(context)
 }
 
-// @Summary 获取一个用户的聊天记录
-// @Description 获取一个用户的聊天记录
+// @Summary 获取聊天记录
+// @Description 获取聊天记录
 // @Tags Dialog
 // @Accept  json
 // @Produce  json
 // @Param customerId path int true "客户 ID"
 // @Success 200 {string} json ""
-// @Router /v1/dialog/{customerId}/history [get]
+// @Router /v1/dialog/{customerId} [get]
 func (c *DialogController) History(context *gin.Context) {
 }
 
-// @Summary 客服发送消息给客户
-// @Description 客服发送消息给客户
+// @Summary 发送消息
+// @Description 发送消息
 // @Tags Dialog
 // @Accept  json
 // @Produce  json
 // @Success 200 {string} json "{"code":0,"msg":"ok"}"
-// @Router /v1/dialog/message [post]
+// @Router /v1/dialog [post]
 func (c *DialogController) SendMessage(context *gin.Context) {
 	var sendRequest SendMessageRequest
 	if bindErr := context.Bind(&sendRequest); bindErr != nil {
